syntax = "proto3";

package user;

service UserService {
  rpc GetUser(UserRequest) returns (UserResponse);
  rpc GetDetailManagerAndTotalStaffInDepartment(detailManagerAndTotalStaffInDepartmentRequest) returns (detailManagerAndTotalStaffInDepartmentResponse);
  rpc GetListStaffInDepartment(GetListStaffInDepartmentRequest) returns (GetListStaffInDepartmentResponse); 
  rpc GetListAllAdministrators(GetListAllAdministratorsRequest) returns (GetListAllAdministResponse);

}

message UserRequest {
  string user_id = 1;
}
message UserResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  string avatar = 5;
  string name = 6;
  string avatar_color = 7;
  string department_id = 8;
  string role_name = 9;
}

message detailManagerAndTotalStaffInDepartmentRequest{
  string department_id = 1;
  string manager_id = 2;
}
message detailManagerAndTotalStaffInDepartmentResponse{
  int64 total_staff = 1;
  UserResponse manager = 2;
}
message GetListStaffInDepartmentRequest{
  string department_id = 1;
}
message GetListStaffInDepartmentResponse{
  repeated string ids = 1;
}
message GetListAllAdministratorsRequest{
}
message GetListAllAdministResponse{
  repeated string ids = 1;
}